# whatsapp-rs

./: .gitignore  Cargo.toml  README.md
examples/: test.rs
src/: auth.rs  browser.rs  chat.rs  error.rs  lib.rs  types.rs
