[package]
name = "whatsapp-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for WhatsApp Web automation"
authors = ["Prane tryprane@gmail.com"]
license = "MIT"
repository = "https://github.com/tryprane/whatsapp-rs"
keywords = ["whatsapp", "automation", "web", "browser"]
categories = ["api-bindings", "web-programming"]

[dependencies]
headless_chrome = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"